<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">"CACSA OAU FFS "</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lesson1">Lesson1Activity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_code_of_conduct">Code Of Conduct</string>
    <string name="title_activity_school_anthem">School Anthem</string>
    <string name="title_activity_sub_groups">Sub Groups</string>
    <string name="title_activity_cacsaleaders">CACSA Leaders</string>
    <string name="title_activity_feed_back">FeedBack</string>
    <string name="title_activity_daily_devotional">Daily Devotional</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_ffsmanual">FFS Outline</string>
    <string name="action_datepicker">Date Picker</string>
    <string name="action_share">Share Button</string>
    <string name="chooser_title">Share Here</string>
    <string name="title_activity_online_reg">Online Registration</string>
    <string name="action_outline">FFS Outline</string>
    <string name="action_anthem">School Anthem</string>
    <string name="action_conduct">Code Of Conduct</string>
    <string name="action_subgroup">CACSA Subgroups</string>
    <string name="action_devotional">About the Daily Devotional </string>
    <string name="action_feedback">Send us your Feedback</string>
    <string name="action_about">About the App</string>
    <string name="title_activity_splash">SplashActivity</string>

</resources>
